# goit-pythonweb-hw-08

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 1c9530f7df33_create_users_table.py  224b4d04999d_create_users_table.py  57ca5c86170f_create_contacts_table.py  75ea5018ad46_add_owner_id_to_contacts.py  88af5919d373_add_avatar_column_to_user_model.py  dea08fd90d1c_add_role_column_to_user_model.py  e39a0497c7be_add_or_remove_verification_token_column.py
app/: config.py  main.py
app/api/: main.py  schemas.py
app/api/routers/: auth.py  contacts.py  user.py
app/db/: crud.py  database.py  models.py
app/repository/: contacts.py  crud.py  database.py  models.py  seed_contacts.py  users.py
app/services/: authentication.py  contact_service.py  user_service.py
app/templates/: reset_password_email.html  verification_email.html
app/tests/: test_authentication.py  test_contact_service.py  test_contacts.py  test_db_connection.py  test_user_service.py
app/utils/: jwt.py  mail.py
docs/: conf.py  index.rst
